Remove end dot from activation and forgot password messages.

--- a/MismeAPI/MismeAPI/Templates/AccountActivation.html
+++ b/MismeAPI/MismeAPI/Templates/AccountActivation.html
@@ -32,7 +32,7 @@
                         </tr>
                         <tr>
                             <td align="center" valign="top">
-                                Your activation code is <b>#CODE#</b>.
+                                Your activation code is <b>#CODE#</b>
                             </td>
                         </tr>
                     </table>
