--- a/MismeAPI/MismeAPI/Templates/ForgotPassword.html
+++ b/MismeAPI/MismeAPI/Templates/ForgotPassword.html
@@ -34,7 +34,7 @@
                         </tr>
                         <tr>
                             <td align="center" valign="top">
-                                Your new password is <b>#PASSWORD#</b>.
+                                Your new password is <b>#PASSWORD#</b>
                             </td>
                         </tr>
                         <tr>
