Send invitations with iOS and Android links

--- a/MismeAPI/MismeAPI/Templates/SendInvitation.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitation.html
@@ -33,7 +33,8 @@
                         <tr>
                             <td align="center" valign="top">
                                 <h3>Find the app here</h3>
-                                <b>#APKLINK#</b>.
+                                <strong>iOS: </strong><b>#APKLINKIOS#</b>.
+                                <strong>Android: </strong><b>#APKLINKANDROID#</b>.
                             </td>
                         </tr>
                     </table>
