Enhance email template UI

--- a/MismeAPI/MismeAPI/Templates/SendInvitation.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitation.html
@@ -33,8 +33,13 @@
                         <tr>
                             <td align="center" valign="top">
                                 <h3>Find the app here</h3>
-                                <strong>iOS: </strong><b>#APKLINKIOS#</b>.
-                                <strong>Android: </strong><b>#APKLINKANDROID#</b>.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="left" valign="top">
+                                <strong>iOS: </strong><b>#APKLINKIOS#</b>
+                                </br>
+                                <strong>Android: </strong><b>#APKLINKANDROID#</b>
                             </td>
                         </tr>
                     </table>
