Add groups crud endpoints

--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
@@ -25,15 +25,26 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hi there,</strong>
                                 </p>
-                                #FULLNAME# is inviting you to join PlaniFive. Download the apps here:</p>
+                                #FULLNAME# is inviting you to join group #GROUPNAME#.:
+                                <p>
+                                    Accept his invitation and start receiving group updates
+                                </p>
+                                <p align="center" valign="top">
+                                    <a href="#ACCEPTINVIATIONURL#" style="color: blue;">ACCEPT</a>
+                                </p>
                             </td>
                         </tr>
                         <tr>
-                            <td align="left" valign="top" style="font-size: 14px;">
-                                <strong>iOS:</strong> #APKLINKIOS#
-                                </br>
-                                <strong>Android:</strong> #APKLINKANDROID#
+                            <td height="20" style="font-size:10px; line-height:10px;">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td align="LEFT" valign="top">
+                                <p>I don't want to be on this group</p>
+                                <a href="#DECLINEINVIATIONURL#" style="color: blue;">Decline</a>
                             </td>
+                        </tr>
+                        <tr>
+                            <td height="20" style="font-size:10px; line-height:10px;">&nbsp;</td>
                         </tr>
                     </table>
                 </td>
