--- a/MismeAPI/MismeAPI/Templates/_header.html
+++ b/MismeAPI/MismeAPI/Templates/_header.html
@@ -1,4 +1,4 @@
-﻿<table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="blue">
+﻿<table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FF3F51B5">
     <tr>
         <td height="35" style="font-size:10px; line-height:10px;">&nbsp;</td>
     </tr>
