--- a/MismeAPI/MismeAPI/Templates/ForgotPassword.html
+++ b/MismeAPI/MismeAPI/Templates/ForgotPassword.html
@@ -12,6 +12,7 @@
 </head>
 <body style="margin:0; padding:0; background-color:#F2F2F2;">
     <center>
+        #HEADER#
         <table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FFFFFF">
             <tr>
                 <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
@@ -20,12 +21,6 @@
                 <td align="center" valign="top">
 
                     <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
-
-                        <tr>
-                            <td align="center" valign="top">
-                                <p style="font-size:18px; font-weight:bold;">Password Reset</p>
-                            </td>
-                        </tr>
                         <tr>
                             <td height="10" style="font-size:10px; line-height:15px;">&nbsp;</td>
                         </tr>
@@ -33,25 +28,32 @@
                             <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
                         </tr>
                         <tr>
-                            <td align="center" valign="top">
+                            <td align="left" valign="top">
+                                <p style="font-size:18px; font-weight:bold;">
+                                    <strong>Hi there,</strong>
+                                </p>
                                 Your new password is <b>#PASSWORD#</b>
                             </td>
                         </tr>
                         <tr>
-                            <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
+                            <td height="20" style="font-size:10px; line-height:10px;">&nbsp;</td>
                         </tr>
                         <tr>
-                            <td style="font-size:12px;" align="center" valign="top">
+                            <td style="font-size:12px;" align="left" valign="top">
                                 Your password can be changed within your user profile.
                             </td>
                         </tr>
+                        <tr>
+                            <td height="20" style="font-size:10px; line-height:10px;">&nbsp;</td>
+                        </tr>
                     </table>
                 </td>
-            </tr>  
-        <tr>
-            <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
-        </tr>
+            </tr>
+            <tr>
+                <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
+            </tr>
         </table>
+        #FOOTER#
     </center>
 </body>
 </html>
