Adding group summary to admin responses. Fix email templates in small devices

--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title></title>
-
-    <style type="text/css">
-    </style>
+    #STYLE#
 </head>
 <body style="margin:0; padding:0; background-color:#F2F2F2;">
     <center>
@@ -19,7 +17,7 @@
             </tr>
             <tr>
                 <td align="center" valign="top">
-                    <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
+                    <table width="500" cellpadding="0" cellspacing="0" border="0" class="container">
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
@@ -34,10 +32,12 @@
                         <tr>
                             <td align="left" valign="top" style="font-size:14px;">
                                 <strong>Temporal credentials:</strong>
-                                </br>
-                                Email: #EMAIL#
-                                </br>
-                                Password: #PASSWORD#
+                                <p style="margin-bottom: 0 !important;">
+                                    Email: #EMAIL#
+                                </p>
+                                <p style="margin-top: 0 !important;">
+                                    Password: #PASSWORD#
+                                </p>
                             </td>
                         </tr>
                         <tr>
