--- a/MismeAPI/MismeAPI/Templates/ForgotPassword.html
+++ b/MismeAPI/MismeAPI/Templates/ForgotPassword.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title></title>
-
-    <style type="text/css">
-    </style>
+    #STYLE#
 </head>
 <body style="margin:0; padding:0; background-color:#F2F2F2;">
     <center>
@@ -20,7 +18,7 @@
             <tr>
                 <td align="center" valign="top">
 
-                    <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
+                    <table width="500" cellpadding="0" cellspacing="0" border="0" class="container">
                         <tr>
                             <td height="10" style="font-size:10px; line-height:15px;">&nbsp;</td>
                         </tr>
