--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title></title>
-
-    <style type="text/css">
-    </style>
+    #STYLE#
 </head>
 <body style="margin:0; padding:0; background-color:#F2F2F2;">
     <center>
@@ -19,7 +17,7 @@
             </tr>
             <tr>
                 <td align="center" valign="top">
-                    <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
+                    <table width="500" cellpadding="0" cellspacing="0" border="0" class="container">
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
