--- a/MismeAPI/MismeAPI/Templates/_header.html
+++ b/MismeAPI/MismeAPI/Templates/_header.html
@@ -1,16 +1,10 @@
-﻿<table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FF3F51B5">
+﻿<table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#f9959e">
     <tr>
         <td height="35" style="font-size:10px; line-height:10px;">&nbsp;</td>
     </tr>
     <tr>
-        <td align="center" valign="top">
-            <table width="500" cellpadding="0" cellspacing="0" border="0" class="container">
-                <tr>
-                    <td align="center" valign="top" style="color: #fff;">
-                        <p style="font-size:18px; font-weight:bold; text-transform:uppercase;">#HEADERSUBJECT# </p>
-                    </td>
-                </tr>
-            </table>
+        <td align="center" valign="top" style="color: #fff;">
+            <p style="font-size:18px; font-weight:bold; text-transform:uppercase;">#HEADERSUBJECT# </p>
         </td>
     </tr>
     <tr>
