Set spanish language to email templates. Add suport to filter users by amount of eat planned.

--- a/MismeAPI/MismeAPI/Templates/AccountActivation.html
+++ b/MismeAPI/MismeAPI/Templates/AccountActivation.html
@@ -27,9 +27,9 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong>
+                                    <strong>Hola,</strong>
                                 </p>
-                                Your activation code is <b>#CODE#</b>
+                                Su codigo de activación: <b>#CODE#</b>
                             </td>
                         </tr>
                         <tr>
