--- a/MismeAPI/MismeAPI/Templates/ForgotPassword.html
+++ b/MismeAPI/MismeAPI/Templates/ForgotPassword.html
@@ -28,9 +28,9 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong>
+                                    <strong>Hola,</strong>
                                 </p>
-                                Your new password is <b>#PASSWORD#</b>
+                                Su nueva contraseña es <b>#PASSWORD#</b>
                             </td>
                         </tr>
                         <tr>
@@ -38,7 +38,7 @@
                         </tr>
                         <tr>
                             <td style="font-size:12px;" align="left" valign="top">
-                                Your password can be changed within your user profile.
+                                Su contraseña puede ser cambiada a traves de su profile.
                             </td>
                         </tr>
                         <tr>
