--- a/MismeAPI/MismeAPI/Templates/SendInvitation.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitation.html
@@ -23,7 +23,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hi there,</strong>
                                 </p>
-                                #FULLNAME# is inviting you to join PlaniFive. Download the apps here:</p>
+                                #FULLNAME# está invitándote a unirte a PlaniFive. Descargue las applicaciones mobiles aqui:</p>
                             </td>
                         </tr>
                         <tr>
