--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
@@ -21,11 +21,11 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong>
+                                    <strong>Hola,</strong>
                                 </p>
-                                #FULLNAME# is inviting you to join group #GROUPNAME#.:
+                                #FULLNAME# está invitandote a unirte al grupo #GROUPNAME#.:
                                 <p>
-                                    Accept his invitation and start receiving group updates
+                                    Acepta su invitación y empieza a recibir actualizaciones
                                 </p>
                                 <p align="center" valign="top">
                                     <a href="#ACCEPTINVIATIONURL#" style="color: blue;">ACCEPT</a>
@@ -37,7 +37,7 @@
                         </tr>
                         <tr>
                             <td align="LEFT" valign="top">
-                                <p>I don't want to be on this group</p>
+                                <p>No quiero estar en este grupo</p>
                                 <a href="#DECLINEINVIATIONURL#" style="color: blue;">Decline</a>
                             </td>
                         </tr>
