--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
@@ -23,7 +23,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hi there,</strong> 
                                 </p>
-                                Planifive is inviting you to manage a group, find your login details below.
+                                Planifive está invitándote a administrar un grupo, encuentra tu informacion de login mas abajo.
                             </td>
                         </tr>
                         <tr>
@@ -31,12 +31,12 @@
                         </tr>
                         <tr>
                             <td align="left" valign="top" style="font-size:14px;">
-                                <strong>Temporal credentials:</strong>
+                                <strong>Credenciales temporales:</strong>
                                 <p style="margin-bottom: 0 !important;">
-                                    Email: #EMAIL#
+                                    Correo electrónico: #EMAIL#
                                 </p>
                                 <p style="margin-top: 0 !important;">
-                                    Password: #PASSWORD#
+                                    Contraseña: #PASSWORD#
                                 </p>
                             </td>
                         </tr>
