--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
@@ -21,9 +21,9 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong> 
+                                    <strong>Hi there,</strong>
                                 </p>
-                                Planifive is inviting you to manage a group. Login in the admin site to start managing your group.
+                                Planifive está invitándote a administrar un grupo. Acceda al website de administración para comenzar a administrar tu grupo.
                             </td>
                         </tr>
                         <tr>
@@ -31,7 +31,7 @@
                         </tr>
                         <tr>
                             <td align="center" valign="top">
-                                <a href="#ADMINURL#" style="color: blue;">Login</a>
+                                <a href="#ADMINURL#" style="color: blue;">Entrar</a>
                             </td>
                         </tr>
                         <tr>
