--- a/MismeAPI/MismeAPI/Templates/_footer.html
+++ b/MismeAPI/MismeAPI/Templates/_footer.html
@@ -4,7 +4,7 @@
     </tr>
     <tr>
         <td align="center" valign="top" style="color:#333; font-size:11px; line-height:10px;">
-            Sent by <strong>Planifive</strong> METRIRI SALUD Y BIENESTAR, SL.
+            Enviado por <strong>Planifive</strong> METRIRI SALUD Y BIENESTAR, SL.
             <p>
                 <strong><a href="mailto:support@planifive.com">support@planifive.com</a></strong>
             </p>
