--- a/MismeAPI/MismeAPI/Templates/AccountActivation.html
+++ b/MismeAPI/MismeAPI/Templates/AccountActivation.html
@@ -29,7 +29,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hola,</strong>
                                 </p>
-                                Su codigo de activación: <b>#CODE#</b>
+                                Su código de activación: <b>#CODE#</b>
                             </td>
                         </tr>
                         <tr>
