Fix email transtalation

--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
@@ -21,7 +21,7 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong> 
+                                    <strong>Hola,</strong>
                                 </p>
                                 Planifive está invitándote a administrar un grupo, encuentra tu informacion de login mas abajo.
                             </td>
@@ -45,7 +45,7 @@
                         </tr>
                         <tr>
                             <td align="center" valign="top">
-                                <a href="#AMINURL#" style="color: blue;">Login</a>
+                                <a href="#ADMINURL#" style="color: blue;">Login</a>
                             </td>
                         </tr>
                         <tr>
