Remove "hi there" text.

--- a/MismeAPI/MismeAPI/Templates/SendInvitation.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitation.html
@@ -21,7 +21,7 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong>
+                                    <strong>Hola,</strong>
                                 </p>
                                 #FULLNAME# está invitándote a unirte a PlaniFive. Descargue las applicaciones mobiles aqui:</p>
                             </td>
