--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
@@ -21,7 +21,7 @@
                         <tr>
                             <td align="left" valign="top">
                                 <p style="font-size:18px; font-weight:bold;">
-                                    <strong>Hi there,</strong>
+                                    <strong>Hola,</strong>
                                 </p>
                                 Planifive está invitándote a administrar un grupo. Acceda al website de administración para comenzar a administrar tu grupo.
                             </td>
