--- a/MismeAPI/MismeAPI/Templates/SendInvitation.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitation.html
@@ -23,7 +23,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hola,</strong>
                                 </p>
-                                #FULLNAME# está invitándote a unirte a PlaniFive. Descargue las applicaciones mobiles aqui:</p>
+                                #FULLNAME# está invitándote a unirte a PlaniFive. Puede descargar la APP desde los siguientes enlaces:</p>
                             </td>
                         </tr>
                         <tr>
