Add support to unsuscribe users from receiving emails

--- a/MismeAPI/MismeAPI/Templates/_footer.html
+++ b/MismeAPI/MismeAPI/Templates/_footer.html
@@ -8,9 +8,14 @@
             <p>
                 <strong><a href="mailto:support@planifive.com">support@planifive.com</a></strong>
             </p>
-        </td> 
+        </td>
+    </tr>
+    <tr>
+        <td align="center" valign="top" style="color:#333; font-size:11px; line-height:10px;">
+            No quiero recibir mas notificaciones de correo: <a href="#UNSUSCRIBEURL#" style="color: red;">Darse de baja</a>
+        </td>
     </tr>
     <tr>
         <td height="10" style="font-size:10px; line-height:10px;">&nbsp;</td>
     </tr>
-<table>
+    <table>
