Translate accept button in email template

--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
@@ -28,7 +28,7 @@
                                     Acepta su invitación y empieza a recibir actualizaciones
                                 </p>
                                 <p align="center" valign="top">
-                                    <a href="#ACCEPTINVIATIONURL#" style="color: blue;">ACCEPT</a>
+                                    <a href="#ACCEPTINVIATIONURL#" style="color: blue;">ACEPTAR</a>
                                 </p>
                             </td>
                         </tr>
@@ -38,7 +38,7 @@
                         <tr>
                             <td align="LEFT" valign="top">
                                 <p>No quiero estar en este grupo</p>
-                                <a href="#DECLINEINVIATIONURL#" style="color: blue;">Decline</a>
+                                <a href="#DECLINEINVIATIONURL#" style="color: blue;">Rechazar</a>
                             </td>
                         </tr>
                         <tr>
