--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroup.html
@@ -23,7 +23,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hola,</strong>
                                 </p>
-                                #FULLNAME# está invitandote a unirte al grupo #GROUPNAME#.:
+                                #FULLNAME# está invitandote a unirte al grupo #GROUPNAME#.
                                 <p>
                                     Acepta su invitación y empieza a recibir actualizaciones
                                 </p>
