--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdmin.html
@@ -23,7 +23,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hola,</strong>
                                 </p>
-                                Planifive está invitándote a administrar un grupo, encuentra tu informacion de login mas abajo.
+                                PlaniFive está invitándote a administrar un grupo, encuentra tu información de login más abajo.
                             </td>
                         </tr>
                         <tr>
