--- a/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
+++ b/MismeAPI/MismeAPI/Templates/SendInvitationGroupAdminExistingUser.html
@@ -23,7 +23,7 @@
                                 <p style="font-size:18px; font-weight:bold;">
                                     <strong>Hola,</strong>
                                 </p>
-                                Planifive está invitándote a administrar un grupo. Acceda al website de administración para comenzar a administrar tu grupo.
+                                PlaniFive está invitándote a administrar un grupo. Acceda al website de administración para comenzar a administrar tu grupo.
                             </td>
                         </tr>
                         <tr>
