--- a/MismeAPI/MismeAPI/Templates/_footer.html
+++ b/MismeAPI/MismeAPI/Templates/_footer.html
@@ -4,15 +4,15 @@
     </tr>
     <tr>
         <td align="center" valign="top" style="color:#333; font-size:11px; line-height:10px;">
-            Enviado por <strong>Planifive</strong> METRIRI SALUD Y BIENESTAR, SL.
+            Enviado por <strong>PlaniFive</strong> METRIRI SALUD Y BIENESTAR SL.
             <p>
-                <strong><a href="mailto:support@planifive.com">support@planifive.com</a></strong>
+                <strong><a href="mailto:support@metriri.me">support@metriri.me</a></strong>
             </p>
         </td>
     </tr>
     <tr>
         <td align="center" valign="top" style="color:#333; font-size:11px; line-height:10px;">
-            No quiero recibir mas notificaciones de correo: <a href="#UNSUSCRIBEURL#" style="color: red;">Darse de baja</a>
+            No quiero recibir más notificaciones de correo: <a href="#UNSUSCRIBEURL#" style="color: red;">Darse de baja</a>
         </td>
     </tr>
     <tr>
