--- a/MismeAPI/MismeAPI/Templates/_footer.html
+++ b/MismeAPI/MismeAPI/Templates/_footer.html
@@ -6,7 +6,7 @@
         <td align="center" valign="top" style="color:#333; font-size:11px; line-height:10px;">
             Enviado por <strong>PlaniFive</strong> METRIRI SALUD Y BIENESTAR SL.
             <p>
-                <strong><a href="mailto:support@metriri.me">support@metriri.me</a></strong>
+                <strong><a href="mailto:salud_y_bienestar@metriri.com">salud_y_bienestar@metriri.com</a></strong>
             </p>
         </td>
     </tr>
